# fixed-size-allocator

./: Cargo.toml  README.md  TODO.md
examples/: allocator_example.rs  stack_allocation.rs
src/: lib.rs
